subiendo todo el ejercicio 1

--- a/ejersM1.ipynb
+++ b/ejersM1.ipynb
@@ -410,6 +410,31 @@
    "id": "b89fa911",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import math\n",
+    "from math import acos\n",
+    "print (\"Bienvenido! este es un programa para calcular la distancia entre dos puntos\")\n",
+    "t= input (\"desea calcular sus coordenadas? (y/n)\")\n",
+    "if t == \"y\":\n",
+    "    g_1 = float(input(\"Escriba el primer valor de latitud: \"))\n",
+    "    t_1 = float(input(\"Escriba el primer valor de longitud:  \"))\n",
+    "    g_2 = float(input(\"Escriba el segundo valor de latitud: \"))\n",
+    "    t_2 = float(input(\"Escriba el segundo valor de longitud: \"))\n",
+    "    print(f\"La primeras coordenadas fueron:({g_1}, {t_1})\")\n",
+    "    print(f\"Las segundas coordenadas fueron: ({g_1}, {t_1})\")  \n",
+    "    a7= 6371.01 * acos(( math.sin (t_1)*math.sin(t_2))+math.cos(t_1)*math.cos(t_2)*math.cos(g_1 - g_2))\n",
+    "    print(\"la distancia es: \" + str(a7))\n",
+    "    print (\"espero le haya sido de ayuda! Adios :D \")\n",
+    "else:\n",
+    "    print (\"Vuelva pronto :D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf9e302",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
