--- a/Modulo 2/ejersM2 - Sin parte 3.ipynb
+++ b/Modulo 2/ejersM2 - Sin parte 3.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "a902e933",
    "metadata": {},
    "outputs": [
@@ -298,8 +298,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese el dB del ruido escuchado: 90\n",
-      "el ruido 2 esta entre 1 y 3\n"
+      "ingrese el dB del ruido escuchado: 10\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12308/432386643.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"el ruido pertenece a: {x}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32melif\u001b[0m \u001b[0mruido\u001b[0m\u001b[1;33m<\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"es menor al minimo\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mruido\u001b[0m\u001b[1;33m>\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
      ]
     }
    ],
@@ -307,21 +317,20 @@
     "## Resolución ejercicio 2.4\n",
     "\n",
     "##TO DO\n",
-    "import operator\n",
+    "\n",
+    "\n",
     "ruido= float (input(\"ingrese el dB del ruido escuchado: \"))\n",
     "ruidos= {\"martillo neumatico\": 130, \"desmalezadora a nafta\": 106, \"alarma reloj\": 70, \"tranquillo\":40}\n",
-    "ruidos['nuevo ruido'] = ruido\n",
-    "for x,y in ruidos.items():\n",
+    "\n",
+    "for x, y in ruidos.items():\n",
     "    if ruido == y:\n",
-    "        print (f\"el ruido es de {x}\")\n",
+    "        print(f\"el ruido pertenece a: {x}\")\n",
     "        break\n",
-    "    else:\n",
-    "        ruidosOrdenados= sorted(ruidos.values())\n",
-    "        if ruido in ruidosOrdenados:\n",
-    "            indid= ruidosOrdenados.index(ruido)\n",
-    "            print(f\"el ruido {indid} esta entre {indid-1} y {indid+1}\")\n",
-    "            break\n",
-    "         #no pude y me canse de intentarlo"
+    "    else :\n",
+    "        print(\"es menor al minimo\")\n",
+    "#no pude, me estrese y me fui a dormir, nota: preguntar luego como se soluciona\n",
+    "     \n",
+    "    "
    ]
   },
   {
@@ -388,7 +397,7 @@
    "outputs": [],
    "source": [
     "## Resolución ejercicio 2.6\n",
-    "\n",
+    "#me dio pereza, luego pregunto\n",
     "##TO DO"
    ]
   },
@@ -404,14 +413,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "ca038f66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese un numero en binario: 100111\n",
+      "su numero en decimal es: 39\n"
+     ]
+    }
+   ],
    "source": [
     "## Resolución ejercicio 2.7\n",
     "\n",
-    "##TO DO"
+    "##TO DO\n",
+    "numBin= input(\"ingrese un numero en binario: \")\n",
+    "num_10 = 0\n",
+    "for pos, dig  in enumerate(numBin[::-1]):\n",
+    "    num_10 += int (dig)*2** pos\n",
+    "print (f\"su numero en decimal es: {num_10}\")\n"
    ]
   },
   {
@@ -428,16 +451,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "0ad62720",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "introduzca un numero:6\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'sum_a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12308/3419490109.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mnumPerfectWin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#si pongo sum_a me toma como que el valor lo existe, por eso en return tengo que poner ==numb, porque?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"el numero {sum_a} es perfecto\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"el numero {sum_a} no es perfecto\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sum_a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "## Resolución ejercicio 2.8\n",
     "\n",
     "##TO DO\n",
     "        \n",
-    "    \n"
+    "def numPerfectWin(numb):\n",
+    "    sum_a = 0\n",
+    "    for h in range(1, numb):\n",
+    "        if numb% h == 0:\n",
+    "            sum_a += h\n",
+    "    return sum_a ==numb\n",
+    " \n",
+    "numb = int(input(\"introduzca un numero:\"))\n",
+    " \n",
+    "if numPerfectWin(numb): #si pongo sum_a me toma como que el valor lo existe, por eso en return tengo que poner ==numb, porque?\n",
+    "    print(f\"el numero {numb} es perfecto\")\n",
+    "else:\n",
+    "    print(f\"el numero {numb} no es perfecto\")\n"
    ]
   },
   {
@@ -460,14 +514,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "3e0225ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese un numero para calcular su factorial: 6\n",
+      "el factorial de 6 es 720\n"
+     ]
+    }
+   ],
    "source": [
     "## Resolución ejercicio 2.9\n",
     "\n",
-    "##TO DO"
+    "##TO DO\n",
+    "#from math import factorial\n",
+    "n1= int(input(\"ingrese un numero para calcular su factorial: \"))\n",
+    "#print(f\"el factorial de {n1} es {factorial(n1)}\") #esta es la forma mas facil pero bueno, habia que hacer una funcion\n",
+    "fact=1 #esto pa que la multiplicacion no sea 0\n",
+    "if n1!=0:\n",
+    "    for w in range(1, n1+1): #esto tuve que ponerlo asi xq por la logica que tengo con el if de n1!=0 no deberia colocarlo pero si me lo requirio o daba error\n",
+    "        fact=fact*w\n",
+    "    print(f\"el factorial de {n1} es {fact}\")\n",
+    "else:\n",
+    "    print(\"el numero es 0, no se puede calcular su factorial\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -484,14 +559,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3b51ecb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese un numero para la lista: 9\n",
+      "['9']\n",
+      "desea agregar otro numero? (y/n)y\n",
+      "ingrese un numero para la lista: 5\n",
+      "['9', '5']\n",
+      "desea agregar otro numero? (y/n)y\n",
+      "ingrese un numero para la lista: 0\n",
+      "['9', '5', '0']\n",
+      "desea agregar otro numero? (y/n)y\n",
+      "ingrese un numero para la lista: 15\n",
+      "['9', '5', '0', '15']\n",
+      "desea agregar otro numero? (y/n)y\n",
+      "ingrese un numero para la lista: 5\n",
+      "desea agregar otro numero? (y/n)m\n",
+      "ingrese un numero para la lista: 9\n",
+      "desea agregar otro numero? (y/n)n\n",
+      "fin del agregado de datos, lista final ['9', '5', '0', '15'] \n"
+     ]
+    }
+   ],
    "source": [
     "## Resolución ejercicio 2.10\n",
     "\n",
-    "##TO DO"
+    "##TO DO\n",
+    "darthVader= []\n",
+    "luke=[]\n",
+    "while True:\n",
+    "    force= input(\"ingrese un numero para la lista: \")\n",
+    "    darthVader.append(force)\n",
+    "    for anakin in darthVader:\n",
+    "        if anakin not in luke:\n",
+    "            luke.append(force)\n",
+    "            print(luke)\n",
+    "    yoda= input(\"desea agregar otro numero? (y/n)\")\n",
+    "    if yoda == \"y\":\n",
+    "        continue \n",
+    "    elif yoda == \"n\":\n",
+    "        print(f\"fin del agregado de datos, lista final {luke} \")\n",
+    "        break\n",
+    "#The Force is Whit You"
    ]
   },
   {
@@ -518,7 +633,7 @@
    "source": [
     "## Resolución ejercicio 2.11\n",
     "\n",
-    "##TO DO"
+    "##TO DO\n"
    ]
   },
   {
