se actualizan algunos ejercicios

--- a/Modulo 2/ejersM2 - Sin parte 3.ipynb
+++ b/Modulo 2/ejersM2 - Sin parte 3.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "6b6be4bd",
    "metadata": {},
    "outputs": [
@@ -243,8 +243,8 @@
      "text": [
       "coloque el valor de a: 4\n",
       "coloque el valor de b: -5\n",
-      "coloque el valor de c: -5\n",
-      "las raices son: (1.9058688457449497, -0.6558688457449497)\n"
+      "coloque el valor de c: -3\n",
+      "las raices son: (0.6396301433995163, 0.6103698566004837)\n"
      ]
     }
    ],
@@ -252,7 +252,6 @@
     "## Resolución ejercicio 2.3\n",
     "\n",
     "##TO DO\n",
-    "import math\n",
     "a=float(input(\"coloque el valor de a: \"))\n",
     "b=float(input(\"coloque el valor de b: \"))\n",
     "c=float(input(\"coloque el valor de c: \"))\n",
@@ -263,8 +262,8 @@
     "    if i<0:\n",
     "        print(\"no hay raices reales\")\n",
     "    else:\n",
-    "        raiz1= (-b+math.sqrt(i))/(2*a) \n",
-    "        raiz2= (-b-math.sqrt(i))/(2*a)      \n",
+    "        raiz1= (-b+((i)**-0.5))/(2*a) \n",
+    "        raiz2= (-b-((i)**-0.5))/(2*a)      \n",
     "    print(f\"las raices son: {raiz1, raiz2}\")\n",
     "    \n",
     "\n",
@@ -317,8 +316,6 @@
     "## Resolución ejercicio 2.4\n",
     "\n",
     "##TO DO\n",
-    "\n",
-    "\n",
     "ruido= float (input(\"ingrese el dB del ruido escuchado: \"))\n",
     "ruidos= {\"martillo neumatico\": 130, \"desmalezadora a nafta\": 106, \"alarma reloj\": 70, \"tranquillo\":40}\n",
     "\n",
@@ -451,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "0ad62720",
    "metadata": {},
    "outputs": [
@@ -459,26 +456,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "introduzca un numero:6\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'sum_a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12308/3419490109.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mnumPerfectWin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#si pongo sum_a me toma como que el valor lo existe, por eso en return tengo que poner ==numb, porque?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"el numero {sum_a} es perfecto\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"el numero {sum_a} no es perfecto\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sum_a' is not defined"
+      "introduzca un numero:6\n",
+      "el numero 6 es perfecto\n"
      ]
     }
    ],
    "source": [
     "## Resolución ejercicio 2.8\n",
     "\n",
-    "##TO DO\n",
-    "        \n",
+    "##TO DO        \n",
     "def numPerfectWin(numb):\n",
     "    sum_a = 0\n",
     "    for h in range(1, numb):\n",
@@ -626,36 +612,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "a89050a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese un año: 1995\n",
+      "el año 1995 no es bisiesto\n"
+     ]
+    }
+   ],
    "source": [
     "## Resolución ejercicio 2.11\n",
     "\n",
-    "##TO DO\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "510e5cbd",
-   "metadata": {},
-   "source": [
-    "##### Ejercicio 2.12\n",
-    "\n",
-    "Impmemente una función que retorne el máximo de una lista de números. No utilizar funciones *built-in*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a93c396b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Resolución ejercicio 2.12\n",
-    "\n",
-    "##TO DO"
+    "##TO DO\n",
+    "año= int (input(\"ingrese un año: \"))\n",
+    "print(f\"el año { año} es bisiesto\" if not año % 4 and (año % 100 or not año % 400) else f\"el año {año} no es bisiesto\")\n",
+    "#if año%4==0 es lo mismo que if not año %4, de igual forma if año %100 es lo mismo que if año%100!=0"
    ]
   },
   {
@@ -670,14 +646,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "641b0e45",
+   "execution_count": 9,
+   "id": "a93c396b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Resolución ejercicio 2.12\n",
+    "\n",
+    "##TO DO\n",
+    "\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "510e5cbd",
+   "metadata": {},
+   "source": [
+    "##### Ejercicio 2.12\n",
+    "\n",
+    "Impmemente una función que retorne el máximo de una lista de números. No utilizar funciones *built-in*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "641b0e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese un numero: 56.3\n",
+      "desea agregar otro numero?: (y/n)y\n",
+      "ingrese un numero: 89\n",
+      "desea agregar otro numero?: (y/n)y\n",
+      "ingrese un numero: 89.1\n",
+      "desea agregar otro numero?: (y/n)n\n",
+      "el valor maximo es: 89.1\n"
+     ]
+    }
+   ],
+   "source": [
     "## Resolución ejercicio 2.13\n",
     "\n",
-    "##TO DO"
+    "##TO DO\n",
+    "listaS=[]\n",
+    "mxVal = None\n",
+    "while True:\n",
+    "    num7= float(input(\"ingrese un numero: \"))\n",
+    "    listaS.append(num7)\n",
+    "    nix= input(\"desea agregar otro numero?: (y/n)\")\n",
+    "    if nix == \"y\":\n",
+    "        continue\n",
+    "    elif nix==\"n\":\n",
+    "        for nm in listaS:\n",
+    "            if (mxVal is None or nm > mxVal):\n",
+    "                mxVal = nm\n",
+    "        print(f\"el valor maximo es: {nm}\")\n",
+    "        break"
    ]
   },
   {
