--- a/Modulo 2/ejersM2 - Sin parte 3.ipynb
+++ b/Modulo 2/ejersM2 - Sin parte 3.ipynb
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "0ad62720",
    "metadata": {},
    "outputs": [
@@ -468,9 +468,9 @@
     "def numPerfectWin(numb):\n",
     "    sum_a = 0\n",
     "    for h in range(1, numb):\n",
-    "        if numb% h == 0:\n",
+    "        if not numb%h:\n",
     "            sum_a += h\n",
-    "    return sum_a ==numb\n",
+    "    return sum_a == numb\n",
     " \n",
     "numb = int(input(\"introduzca un numero:\"))\n",
     " \n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "3e0225ac",
    "metadata": {},
    "outputs": [
@@ -508,8 +508,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero para calcular su factorial: 6\n",
-      "el factorial de 6 es 720\n"
+      "ingrese un numero para calcular su factorial: 0\n",
+      "el factorial de 0 es 1\n"
      ]
     }
    ],
@@ -518,16 +518,16 @@
     "\n",
     "##TO DO\n",
     "#from math import factorial\n",
-    "n1= int(input(\"ingrese un numero para calcular su factorial: \"))\n",
-    "#print(f\"el factorial de {n1} es {factorial(n1)}\") #esta es la forma mas facil pero bueno, habia que hacer una funcion\n",
-    "fact=1 #esto pa que la multiplicacion no sea 0\n",
-    "if n1!=0:\n",
-    "    for w in range(1, n1+1): #esto tuve que ponerlo asi xq por la logica que tengo con el if de n1!=0 no deberia colocarlo pero si me lo requirio o daba error\n",
+    "def numeroso1(n1):\n",
+    "    fact=1\n",
+    "    for w in range(1, n1+1):\n",
     "        fact=fact*w\n",
-    "    print(f\"el factorial de {n1} es {fact}\")\n",
-    "else:\n",
-    "    print(\"el numero es 0, no se puede calcular su factorial\")\n",
+    "    return fact\n",
     "\n",
+    "n1= int(input(\"ingrese un numero para calcular su factorial: \"))\n",
+    "print(f\"el factorial de {n1} es {numeroso1(n1)}\")\n",
+    "\n",
+    "    \n",
     "\n"
    ]
   },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "3b51ecb3",
    "metadata": {},
    "outputs": [
@@ -553,46 +553,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero para la lista: 9\n",
-      "['9']\n",
-      "desea agregar otro numero? (y/n)y\n",
-      "ingrese un numero para la lista: 5\n",
-      "['9', '5']\n",
-      "desea agregar otro numero? (y/n)y\n",
-      "ingrese un numero para la lista: 0\n",
-      "['9', '5', '0']\n",
-      "desea agregar otro numero? (y/n)y\n",
-      "ingrese un numero para la lista: 15\n",
-      "['9', '5', '0', '15']\n",
-      "desea agregar otro numero? (y/n)y\n",
-      "ingrese un numero para la lista: 5\n",
-      "desea agregar otro numero? (y/n)m\n",
-      "ingrese un numero para la lista: 9\n",
-      "desea agregar otro numero? (y/n)n\n",
-      "fin del agregado de datos, lista final ['9', '5', '0', '15'] \n"
+      "la lista sin repetidos es: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
    "source": [
     "## Resolución ejercicio 2.10\n",
     "\n",
-    "##TO DO\n",
-    "darthVader= []\n",
-    "luke=[]\n",
-    "while True:\n",
-    "    force= input(\"ingrese un numero para la lista: \")\n",
-    "    darthVader.append(force)\n",
-    "    for anakin in darthVader:\n",
-    "        if anakin not in luke:\n",
-    "            luke.append(force)\n",
-    "            print(luke)\n",
-    "    yoda= input(\"desea agregar otro numero? (y/n)\")\n",
-    "    if yoda == \"y\":\n",
-    "        continue \n",
-    "    elif yoda == \"n\":\n",
-    "        print(f\"fin del agregado de datos, lista final {luke} \")\n",
-    "        break\n",
-    "#The Force is Whit You"
+    "##TO DOç\n",
+    "def starwars(force):\n",
+    "    choseone=[]\n",
+    "    for anakin in force:\n",
+    "        if anakin not in choseone:\n",
+    "            choseone.append(anakin)      \n",
+    "    return choseone\n",
+    "force=[1,1,2,3,4,5,6,7,7,8,9]\n",
+    "print(f\"la lista sin repetidos es: {starwars(force)}\")\n",
+    "   "
    ]
   },
   {
@@ -612,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "a89050a3",
    "metadata": {},
    "outputs": [
@@ -620,8 +597,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un año: 1995\n",
-      "el año 1995 no es bisiesto\n"
+      "ingrese un año: 1996\n",
+      "el año el año es bisiesto\n"
      ]
     }
    ],
@@ -629,9 +606,13 @@
     "## Resolución ejercicio 2.11\n",
     "\n",
     "##TO DO\n",
-    "año= int (input(\"ingrese un año: \"))\n",
-    "print(f\"el año { año} es bisiesto\" if not año % 4 and (año % 100 or not año % 400) else f\"el año {año} no es bisiesto\")\n",
-    "#if año%4==0 es lo mismo que if not año %4, de igual forma if año %100 es lo mismo que if año%100!=0"
+    "def anobis(ano):\n",
+    "    if not ano% 4 and (ano % 100 or not ano % 400):\n",
+    "        return \"el año es bisiesto\"\n",
+    "    else:\n",
+    "        return \"el año no es bisiesto\"\n",
+    "ano= int (input(\"ingrese un año: \"))\n",
+    "print(f\"el año {anobis(ano)}\")"
    ]
   },
   {
@@ -646,15 +627,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a93c396b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la mediana de [2, 3, 4, 5, 6, 7, 8, 9, 10] es 6\n"
+     ]
+    }
+   ],
    "source": [
     "## Resolución ejercicio 2.12\n",
     "\n",
     "##TO DO\n",
     "\n",
+    "def mediana(nums):\n",
+    "    half = len(nums) // 2\n",
+    "    nums.sort()\n",
+    "    if not len(nums) % 2:\n",
+    "        return (nums[half - 1] + nums[half]) / 2.0\n",
+    "    return nums[half]\n",
+    "\n",
+    "nums=[2,3,4,5,6,7,8,9,10]\n",
+    "print(f\"la mediana de {nums} es {mediana(nums)}\")\n",
     "      "
    ]
   },
@@ -670,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "641b0e45",
    "metadata": {},
    "outputs": [
@@ -678,13 +676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero: 56.3\n",
-      "desea agregar otro numero?: (y/n)y\n",
-      "ingrese un numero: 89\n",
-      "desea agregar otro numero?: (y/n)y\n",
-      "ingrese un numero: 89.1\n",
-      "desea agregar otro numero?: (y/n)n\n",
-      "el valor maximo es: 89.1\n"
+      "el valor maximo de la lista [23, 45, 3, 1, 0] es 45\n"
      ]
     }
    ],
@@ -692,20 +684,15 @@
     "## Resolución ejercicio 2.13\n",
     "\n",
     "##TO DO\n",
-    "listaS=[]\n",
-    "mxVal = None\n",
-    "while True:\n",
-    "    num7= float(input(\"ingrese un numero: \"))\n",
-    "    listaS.append(num7)\n",
-    "    nix= input(\"desea agregar otro numero?: (y/n)\")\n",
-    "    if nix == \"y\":\n",
-    "        continue\n",
-    "    elif nix==\"n\":\n",
-    "        for nm in listaS:\n",
-    "            if (mxVal is None or nm > mxVal):\n",
-    "                mxVal = nm\n",
-    "        print(f\"el valor maximo es: {nm}\")\n",
-    "        break"
+    "def maximo(listaX):\n",
+    "    numM=0\n",
+    "    for numero in listaX:\n",
+    "        if numero>numM:\n",
+    "            numM=numero\n",
+    "    return numM\n",
+    " \n",
+    "listaX=[23,45,3,1,0]\n",
+    "print(f\"el valor maximo de la lista {listaX} es {maximo(listaX)}\")\n"
    ]
   },
   {
