se actualiza repo con ejerciciosw

--- a/Modulo 2/Ejemplos Módulo 2 - Parte 2.ipynb
+++ b/Modulo 2/Ejemplos Módulo 2 - Parte 2.ipynb
@@ -942,13 +942,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "c8220d2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Fluor-18', 'Galio-67', 'cobre-64', 'Iodo-124', 'Cromo'])\n",
+      "ingrese el radioisotopo deseado: Galio-67\n",
+      "ingrese la actividad inicial: 5\n",
+      "ingrese el tiempo: 5\n",
+      "el radioisotopo: Galio-67 tiene un valor de decaimiento de: 5, con una actividad inicial 5 y tiempo 5 se obtiene una actividad de 1.8393972058572117\n"
+     ]
+    }
+   ],
    "source": [
     "### Resolución Ejercicio 3\n",
-    "### TODO\n"
+    "### T\n",
+    "from numpy import exp \n",
+    "def radioiso(dicRadio):\n",
+    "    a1= re2*exp(-(dicRadio[re])/re3)\n",
+    "    return a1\n",
+    "\n",
+    "dicRadio= {'Fluor-18': 5, 'Galio-67': 5, 'cobre-64':4 , 'Iodo-124':2 , 'Cromo':44}\n",
+    "print(dicRadio.keys())\n",
+    "re= input(\"ingrese el radioisotopo deseado: \")\n",
+    "re2= int(input(\"ingrese la actividad inicial: \"))\n",
+    "re3= int(input(\"ingrese el tiempo: \"))\n",
+    "if re in dicRadio.keys():\n",
+    "    print(f\"el radioisotopo: {re} tiene un valor de decaimiento de: {dicRadio[re]}, con una actividad inicial {re2} y tiempo {re3} se obtiene una actividad de {radioiso(dicRadio)}\")\n",
+    "else:\n",
+    "    print (re, \"ese radioisotopo no existe\")"
    ]
   },
   {
@@ -973,7 +999,7 @@
    "outputs": [],
    "source": [
     "### Resolución Ejercicio 4\n",
-    "### TODO"
+    "### TODO\n"
    ]
   },
   {
