--- a/Modulo 2/ejemplosM21.ipynb
+++ b/Modulo 2/ejemplosM21.ipynb
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "fa628963",
    "metadata": {},
    "outputs": [
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "cf99a820",
    "metadata": {},
    "outputs": [
@@ -1653,12 +1653,8 @@
      "text": [
       "[1, 2, 3]\n",
       "[4, 5, 6]\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n"
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n"
      ]
     }
    ],
@@ -1736,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "da9bf96d",
    "metadata": {},
    "outputs": [
@@ -1744,6 +1740,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
       "\n",
       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
@@ -1756,9 +1754,10 @@
    "source": [
     "#creamos una lista de números enteros que van de 1 a 10\n",
     "nums = [*range(1,11)]\n",
+    "print(nums)\n",
     "\n",
     "lista = [a for a in range(1,101) if a%10 == 0]\n",
-    "lista\n",
+    "print(lista)\n",
     "\n",
     "##queremos elevar al cuadrado los valores dentro de nums\n",
     "\n",
@@ -2005,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "02adeed8",
    "metadata": {},
    "outputs": [
@@ -2013,8 +2012,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese el radioisotopo deseado: Galio-67\n",
-      "el radioisotopo: Galio-67 tiene un valor de decaimiento de: 5\n"
+      "ingrese el radioisotopo deseado: Fluor-18\n",
+      "el radioisotopo: Fluor-18 tiene un valor de decaimiento de: 5\n"
      ]
     }
    ],
@@ -2024,7 +2023,10 @@
     "#h=lg2/T1/2\n",
     "dicRadio= {'Fluor-18': 5, 'Galio-67': 5, 'cobre-64':4 , 'Iodo-124':2 , 'Cromo':44}\n",
     "re= input(\"ingrese el radioisotopo deseado: \")\n",
-    "print(f\"el radioisotopo: {re} tiene un valor de decaimiento de:\", dicRadio.get(re, \"ese radioisotopo no existe\"))"
+    "if re in dicRadio.keys():\n",
+    "    print(f\"el radioisotopo: {re} tiene un valor de decaimiento de: {dicRadio[re]}\")\n",
+    "else:\n",
+    "    print (re, \"ese radioisotopo no existe\")"
    ]
   },
   {
