--- a/Modulo 2/Ejercitación Módulo 2 - Tercera Parte.ipynb
+++ b/Modulo 2/Ejercitación Módulo 2 - Tercera Parte.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "1c4821ce",
    "metadata": {},
    "outputs": [
@@ -57,14 +57,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el valor outliers es 3444\n"
+      "el valor outliers es 55\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.1\n",
     "##TO DO\n",
-    "lita=[55,55,66,36,54,58,93,30,26,49,79,73,34,3444]\n",
+    "lita=[55,55,66,36,54,58,93,30,26,49,79,73,34,3444,20000]\n",
     "    \n",
     "def outlie(lita):\n",
     "    sorted(lita)\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "4b721a6d",
    "metadata": {},
    "outputs": [
@@ -144,11 +144,21 @@
      "text": [
       "ingrese un numero: 1\n",
       "ingrese y o n para continuar o terminar: y\n",
-      "ingrese un numero: 2\n",
+      "ingrese un numero: 1\n",
       "ingrese y o n para continuar o terminar: y\n",
-      "ingrese un numero: 5\n",
-      "ingrese y o n para continuar o terminar: n\n",
-      "la lista con los numeros [1, 2, 5] es: 8\n"
+      "ingrese un numero: 2\n",
+      "ingrese y o n para continuar o terminar: n\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'listanumeros' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9252/4145663437.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresultado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"la lista con los numeros {list} es: {listanumeros(list)}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'listanumeros' is not defined"
      ]
     }
    ],
@@ -227,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "6d787c0d",
    "metadata": {},
    "outputs": [
@@ -236,10 +246,10 @@
      "output_type": "stream",
      "text": [
       "menu: 1 - suma; 2 - resta; 3 - division; 4- multiplicacion\n",
-      "ingrese que tipo de operacion desea realizar segun el menu: 1\n",
-      "ingrese un valor: 3\n",
-      "ingrese el segundo valor: 4\n",
-      "la operacion seleccionada dio como resultado 7\n"
+      "ingrese que tipo de operacion desea realizar segun el menu: sumar\n",
+      "ingrese un valor: 5\n",
+      "ingrese el segundo valor: 5\n",
+      "la operacion seleccionada dio como resultado 0\n"
      ]
     }
    ],
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "8b80fb8c",
    "metadata": {},
    "outputs": [
@@ -296,8 +306,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un valor N para realizar las aproximaciones: 2.09\n",
-      "la sumatoria da: 3.131337928472642\n"
+      "ingrese un valor N para realizar las aproximaciones: 10000\n",
+      "la sumatoria da: 3.000000000002074\n"
      ]
     }
    ],
@@ -323,6 +333,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1615802c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Resolución Ejercicio 3.5\n",
+    "\n",
+    "##TO DO\n",
+    "\n",
+    "N = 100000\n",
+    "f = lambda n,k: ((-1)**k)*(1/(n*(n+1)*(n+2)))\n",
+    "pi = 3 + 4*sum([f(n,k) for n,k in zip((range(2,N,2)), range(0,N))])\n",
+    "pi\n",
+    "\n",
+    "## Nota, podríamos haber hecho\n",
+    "## pi = 3 + 4*sum([(lambda n,k: ((-1)**k)*(1/(n*(n+1)*(n+2))))(n,k) for n,k in zip((range(2,N,2)), range(0,N))])\n",
+    "## pero poner la función lambda dentro de la listComps puede resultar confuso cuando es muy extensa"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "99326d18",
    "metadata": {},
@@ -340,28 +382,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "b81b07f0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introducir Mensaje: mtqf htrt jxyfx\n",
-      "ingrese el numero de movimientos a realizar [1-26]: 5\n",
-      "ingrese el modo, 1 para cifrar y 2 para descifrar: 2\n",
-      "el mensaje cifrado es: HOLA COMO ESTAS\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'tomy suarez'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "## Resolución Ejercicio 3.6\n",
     "##TO DO\n",
     "\n",
-    "mensaje = input(\"introducir Mensaje: \")\n",
-    "mov = int(input(\"ingrese el numero de movimientos a realizar [1-26]: \"))\n",
-    "modo= int(input(\"ingrese el modo, 1 para cifrar y 2 para descifrar: \"))       \n",
+    "# mensaje = input(\"introducir Mensaje: \")\n",
+    "# mov = int(input(\"ingrese el numero de movimientos a realizar [1-26]: \"))\n",
+    "# modo= int(input(\"ingrese el modo, 1 para cifrar y 2 para descifrar: \"))       \n",
     "def codificar(mensaje, mov):\n",
     "    trans = \"\"\n",
     "    letras= \"abcdefghijklmnopqrstuvwxyz\"\n",
@@ -393,10 +435,13 @@
     "        else:\n",
     "            trans += simbol\n",
     "    return trans\n",
-    "if modo == 1:\n",
-    "    print(f\"el mensaje cifrado es: {codificar(mensaje, mov)}\")\n",
-    "elif modo==2:\n",
-    "    print(f\"el mensaje cifrado es: {decodificar(mensaje, mov)}\")"
+    "# if modo == 1:\n",
+    "#     print(f\"el mensaje cifrado es: {codificar(mensaje, mov)}\")\n",
+    "# elif modo==2:\n",
+    "#     print(f\"el mensaje cifrado es: {decodificar(mensaje, mov)}\")\n",
+    "\n",
+    "codificar(\"tomy suarez\", 3)\n",
+    "decodificar('wrpb vxduhc',3)"
    ]
   },
   {
@@ -507,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "ea952473",
    "metadata": {
     "scrolled": true
@@ -602,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "fc28012e",
    "metadata": {},
    "outputs": [
@@ -610,8 +655,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero para estimar su raiz cuadrada: 9\n",
-      "su raiz cuadrada es: 5.0\n"
+      "ingrese un numero para estimar su raiz cuadrada: 25\n",
+      "su raiz cuadrada es: 13.0\n"
      ]
     }
    ],
@@ -714,6 +759,32 @@
     "<hr style=\"border:1px solid gray\"> </hr>\n",
     "\n",
     "##  <span style='color:#3A40A2 '>FIN</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0137fb1",
+   "metadata": {},
+   "source": [
+    "Te paso comentarios de los ejercicios.\n",
+    "\n",
+    "- <span style='color:red'> 3.1 - No funciona correctamente. Debe devolverse una lista con los outliers.</span>\n",
+    "- <span style='color:red'> 3.2 - No funciona correctamente.</span>\n",
+    "- 3.3 - OK: Para la próxima formatea la salida para que queden como mucho dos decimales.\n",
+    "- <span style='color:red'> 3.4 - No funciona correctamente.</span>\n",
+    "- <span style='color:red'>3.5 - No funciona: Te deje una respuesta alternativa</span>\n",
+    "- <span style='color:green'> 3.6 - Esta OK. Intenta no rebuscartela tanto con el tema del ingreso por teclado.</span>\n",
+    "- <span style='color:red'> 3.7 - No está implementado.</span>\n",
+    "- <span style='color:red'> 3.8 - No está implementado.</span>\n",
+    "- 3.9 - OK\n",
+    "- <span style='color:red'> 3.10 - No está implementado.</span>\n",
+    "- <span style='color:red'> 3.11 - No funciona correctamente.</span>\n",
+    "- <span style='color:red'> 3.12 - No funciona correctamente.</span>\n",
+    "- <span style='color:red'> 3.13 - No funciona correctamente.</span>\n",
+    "\n",
+    "Falta la documentación en las funciones que se piden. Repasar docstring.\n",
+    "\n",
+    "Tu calificación es **30**."
    ]
   }
  ],
