se actualiza repo

--- a/Modulo 2/ejersM2 - Sin parte 3.ipynb
+++ b/Modulo 2/ejersM2 - Sin parte 3.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a93c396b",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la mediana de [2, 3, 4, 5, 6, 7, 8, 9, 10] es 6\n"
+      "la mediana de [2, 3, 4, 5, 6, 90, 8, 9, 10, 56, 99] es 8\n"
      ]
     }
    ],
@@ -651,7 +651,7 @@
     "        return (nums[half - 1] + nums[half]) / 2.0\n",
     "    return nums[half]\n",
     "\n",
-    "nums=[2,3,4,5,6,7,8,9,10]\n",
+    "nums=[2,3,4,5,6,90,8,9,10,56,99]\n",
     "print(f\"la mediana de {nums} es {mediana(nums)}\")\n",
     "      "
    ]
