--- a/Modulo 2/Ejercitación Módulo 2 - part3 corregidos.ipynb
+++ b/Modulo 2/Ejercitación Módulo 2 - part3 corregidos.ipynb
@@ -143,19 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5d6702f8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_10796/2224283148.py, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9720/1754664385.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mproduct\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpeso\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maltura\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#aplico lambda como pide la letra\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#product = [x/(y*y) for x,y in zip(peso,altura)]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{i for i in product():.2f}\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#formateo la lista para que me de solo 2 decimales (Solucinar)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;31m#print(product)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\tomy_\\AppData\\Local\\Temp/ipykernel_10796/2224283148.py\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    print(i for i in product f\"{0: .2f}\".format(lista2.append(i)))\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -166,6 +163,8 @@
     "peso = [68,112,82,69,72,65]\n",
     "product = list(map(lambda x,y: x/y**2, peso, altura)) #aplico lambda como pide la letra\n",
     "#product = [x/(y*y) for x,y in zip(peso,altura)]\n",
+    "lista2=[]\n",
+    "print(i for i in product f\"{0: .2f}\".format(lista2.append(i)))\n",
     "#print(f\"{i for i in product():.2f}\") #formateo la lista para que me de solo 2 decimales (Solucinar)\n",
     "print(product)"
    ]
