se actualiza el repo

--- a/Modulo 2/Ejercitación Módulo 2 - part3 corregidos.ipynb
+++ b/Modulo 2/Ejercitación Módulo 2 - part3 corregidos.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4b721a6d",
    "metadata": {},
    "outputs": [
@@ -116,14 +116,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "2316\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.2\n",
     "### aTO DO\n",
-    "lista=[2,3,4,5,6]\n",
+    "lista=[2,3,4,5,6,6,7,8,9,23,23,4,67,868,69,0,4,234,6,869,99]\n",
     "def suma(*args):\n",
     "    return sum(i for i in lista)\n",
     "print(suma(lista))"
@@ -143,16 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5d6702f8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_10796/2224283148.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\tomy_\\AppData\\Local\\Temp/ipykernel_10796/2224283148.py\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    print(i for i in product f\"{0: .2f}\".format(lista2.append(i)))\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.38, 38.75, 33.69, 24.74, 20.16, 16.58]\n"
      ]
     }
    ],
@@ -161,11 +160,7 @@
     "### TO DO\n",
     "altura = [1.67,1.70,1.56,1.67,1.89,1.98]\n",
     "peso = [68,112,82,69,72,65]\n",
-    "product = list(map(lambda x,y: x/y**2, peso, altura)) #aplico lambda como pide la letra\n",
-    "#product = [x/(y*y) for x,y in zip(peso,altura)]\n",
-    "lista2=[]\n",
-    "print(i for i in product f\"{0: .2f}\".format(lista2.append(i)))\n",
-    "#print(f\"{i for i in product():.2f}\") #formateo la lista para que me de solo 2 decimales (Solucinar)\n",
+    "product = [round(x/(y*y), 2) for x,y in zip(peso,altura)]\n",
     "print(product)"
    ]
   },
@@ -187,19 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "6d787c0d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "menu: ingrese 1  para suma; ingrese 2  para resta, ingrese 3  para division, ingrese 4  para multiplicacion\n",
-      "ingrese que tipo de operacion desea realizar segun el menu: 4\n",
-      "ingrese un valor: 3\n",
-      "ingrese el segundo valor: 2\n",
-      "la operacion seleccionada dio como resultado: 6\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (Temp/ipykernel_9788/2562898254.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\tomy_\\AppData\\Local\\Temp/ipykernel_9788/2562898254.py\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    \"\"\"\"\u001b[0m\n\u001b[1;37m        \n^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -738,10 +730,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "341b29a86feb41683388a2350ede9b29bff08e5e019b1f08826cb582c6a8c162"
+   "hash": "006f6d0a146a98ae4e484b7ab3e390336df27d1d007489d4cd24e5cef89f8849"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
