--- a/Modulo 2/ejersM2 - Sin parte 3.ipynb
+++ b/Modulo 2/ejersM2 - Sin parte 3.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "bbf41bcd",
    "metadata": {},
    "outputs": [
@@ -92,16 +92,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buenas!\n"
+      "24\n"
      ]
     }
    ],
    "source": [
-    "def saludar():\n",
-    "    print(\"Buenas!\")\n",
-    "\n",
-    "s1 = saludar()\n",
-    "s2 = saludar"
+    "def saludar(n):\n",
+    "    if n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*saludar(n-1)\n",
+    "n=4\n",
+    "print(saludar(n))"
    ]
   },
   {
@@ -500,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "3e0225ac",
    "metadata": {},
    "outputs": [
@@ -508,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero para calcular su factorial: 0\n",
-      "el factorial de 0 es 1\n"
+      "ingrese un numero para calcular su factorial: 5\n",
+      "el factorial de 5 es 120\n"
      ]
     }
    ],
@@ -519,10 +521,9 @@
     "##TO DO\n",
     "#from math import factorial\n",
     "def numeroso1(n1):\n",
-    "    fact=1\n",
-    "    for w in range(1, n1+1):\n",
-    "        fact=fact*w\n",
-    "    return fact\n",
+    "    if n1==1:\n",
+    "        return 1\n",
+    "    return n1* numeroso1(n1-1)\n",
     "\n",
     "n1= int(input(\"ingrese un numero para calcular su factorial: \"))\n",
     "print(f\"el factorial de {n1} es {numeroso1(n1)}\")\n",
