--- a/Modulo 4/Ejercitación  Módulo 4 - Primera parte.ipynb
+++ b/Modulo 4/Ejercitación  Módulo 4 - Primera parte.ipynb
@@ -31,52 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "2e84b3c8",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "la media es 27.0\n",
-      "la mediana es 5.5\n",
-      "la varianza es 1505.5\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "class BasicStats():\n",
-    "    \"\"\"comienza la clase BasicStats\"\"\"\n",
-    "    def __init__(self, listactrl):\n",
-    "        \"\"\"constructor\"\"\"\n",
-    "        self.lista = listactrl\n",
-    "        \n",
-    "        \n",
-    "    def media(self):\n",
-    "        \"\"\"Calculo de media\"\"\"\n",
-    "        return sum(self.lista)/len(self.lista)\n",
-    "    \n",
-    "    def mediana(self):\n",
-    "        \"\"\"calculo la mediana\"\"\"\n",
-    "        half = len(self.lista) // 2\n",
-    "        self.lista.sort()\n",
-    "        if not len(self.lista) % 2:\n",
-    "            return (self.lista[half - 1] + self.lista[half]) / 2.0\n",
-    "        return {self.lista[half]}\n",
-    "\n",
-    "    def varianza(self):\n",
-    "        media= self.media()\n",
-    "        return sum([(i-int(media))**2 for i in self.lista])/len(self.lista)\n",
-    "\n",
-    "grupo = [2,3,4,5,6,8,99,89]\n",
-    "control = BasicStats(grupo)\n",
-    "print(f\"la media es {control.media()}\")\n",
-    "print(f\"la mediana es {control.mediana()}\")\n",
-    "print(f\"la varianza es {control.varianza()}\")\n",
-    "\n"
+    "#TO DO..."
    ]
   },
   {
@@ -234,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:pda]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-pda-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
