--- a/Modulo 2/Ejercitación Módulo 2 - Tercera Parte.ipynb
+++ b/Modulo 2/Ejercitación Módulo 2 - Tercera Parte.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "1c4821ce",
    "metadata": {},
    "outputs": [
@@ -57,14 +57,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el valor outliers es 55\n"
+      "el valor outliers es [3444, 20000]\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.1\n",
     "##TO DO\n",
-    "lita=[55,55,66,36,54,58,93,30,26,49,79,73,34,3444,20000]\n",
+    "lita=[55,55,66,36,54,58,80,30,26,49,79,73,34,3444,20000]\n",
     "    \n",
     "def outlie(lita):\n",
     "    sorted(lita)\n",
@@ -74,11 +74,12 @@
     "    q1= lita[q11]\n",
     "    q2= lita[q31]\n",
     "    RIC= q2-q1\n",
+    "    out = []\n",
     "    for i in lita:\n",
-    "        if lita !=0 and i<(q1-1.5*RIC) or i>(q2+1.5*RIC):\n",
-    "            return f\"el valor outliers es {i}\"\n",
-    "        elif lita==0:\n",
-    "            return None\n",
+    "        if i>(q1-1.5*RIC) or i<(q2+1.5*RIC):\n",
+    "            out.append(i)\n",
+    "    return f\"el valor outliers es {out}\"\n",
+    "\n",
     "print(outlie(lita))   \n"
    ]
   },
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "4b721a6d",
    "metadata": {},
    "outputs": [
@@ -142,46 +143,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero: 1\n",
-      "ingrese y o n para continuar o terminar: y\n",
-      "ingrese un numero: 1\n",
-      "ingrese y o n para continuar o terminar: y\n",
-      "ingrese un numero: 2\n",
-      "ingrese y o n para continuar o terminar: n\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'listanumeros' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9252/4145663437.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresultado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"la lista con los numeros {list} es: {listanumeros(list)}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'listanumeros' is not defined"
+      "la lista con los numeros [1, 3, 4, 9, 89, 76] es: 182\n"
      ]
     }
    ],
    "source": [
     "### Resolución ejercicio 3.2\n",
     "### TO DO\n",
-    "list=[]\n",
-    "while True:\n",
-    "    n1=int(input (\"ingrese un numero: \"))\n",
-    "    seguir= input(\"ingrese y o n para continuar o terminar: \")\n",
-    "    list.append(n1)\n",
-    "    if seguir == \"y\":\n",
-    "        \n",
-    "        continue\n",
-    "    elif seguir ==\"n\":\n",
-    "        break\n",
-    "def suma(list):\n",
-    "    resultado = 0\n",
-    "    for i in num:\n",
-    "        resultado += i\n",
-    "    return resultado\n",
+    "list=[1,3,4,9,89,76]\n",
+    "def sumas(*artu):\n",
+    "    a=0\n",
+    "    for i in list:\n",
+    "        a += a+i\n",
+    "    return a\n",
     "\n",
-    "print(f\"la lista con los numeros {list} es: {listanumeros(list)}\")"
+    "print(f\"la lista con los numeros {list} es: {suma(list)}\")"
    ]
   },
   {
@@ -198,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5d6702f8",
    "metadata": {},
    "outputs": [
@@ -206,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24.38237297859371, 38.754325259515575, 33.694937541091385, 24.740937287102444, 20.15621063240111, 16.579940822365064]\n"
+      "[24.38, 38.75, 33.69, 24.74, 20.16, 16.58]\n"
      ]
     }
    ],
@@ -215,7 +191,7 @@
     "### TO DO\n",
     "altura = [1.67,1.70,1.56,1.67,1.89,1.98]\n",
     "peso = [68,112,82,69,72,65]\n",
-    "product = [x/(y*y) for x,y in zip(peso,altura)]\n",
+    "product = [round(x/(y*y),2) for x,y in zip(peso,altura)]\n",
     "print(product)"
    ]
   },
@@ -382,19 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "b81b07f0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'tomy suarez'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrpb vxduhc\n",
+      "tomy suarez\n"
+     ]
     }
    ],
    "source": [
@@ -440,8 +414,8 @@
     "# elif modo==2:\n",
     "#     print(f\"el mensaje cifrado es: {decodificar(mensaje, mov)}\")\n",
     "\n",
-    "codificar(\"tomy suarez\", 3)\n",
-    "decodificar('wrpb vxduhc',3)"
+    "print(codificar(\"tomy suarez\", 3))\n",
+    "print(decodificar('wrpb vxduhc',3))"
    ]
   },
   {
@@ -790,10 +764,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "341b29a86feb41683388a2350ede9b29bff08e5e019b1f08826cb582c6a8c162"
+   "hash": "006f6d0a146a98ae4e484b7ab3e390336df27d1d007489d4cd24e5cef89f8849"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
