se actualiza el repo

--- a/Modulo 4/Ejercitación  Módulo 4 - Primera parte.ipynb
+++ b/Modulo 4/Ejercitación  Módulo 4 - Primera parte.ipynb
@@ -31,12 +31,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "2e84b3c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1503.38\n",
+      "7791419.78\n",
+      "2791.31\n",
+      "el valor outliers es [7999, 4555, 6777]\n"
+     ]
+    }
+   ],
    "source": [
-    "#TO DO..."
+    "#TO DO...\n",
+    "listaNum=[2,4,5,6,2,24,234,5,7,878,24,3,1,7]\n",
+    "class BasicStats():\n",
+    "\n",
+    "    def __init__(self,listaD):\n",
+    "        \"\"\"constructor\"\"\"\n",
+    "        self.liDVal= listaD\n",
+    "    \n",
+    "    \n",
+    "    def media(self):\n",
+    "        \"\"\"calcula la media\"\"\"\n",
+    "        return round(sum(self.liDVal)/len(self.liDVal),2)\n",
+    "\n",
+    "    \n",
+    "    def varia(self):\n",
+    "        \"\"\"Calcula la varianza\"\"\"\n",
+    "        media = self.media()\n",
+    "        return round((sum([(i-media)**2 for i in self.liDVal])/len(self.liDVal)),2)\n",
+    "\n",
+    "    \n",
+    "    def DevSt(self):\n",
+    "        \"\"\"calcula la desviacion estandar\"\"\"\n",
+    "        media = self.media()\n",
+    "        return round(((sum([(i-media)**2 for i in self.liDVal])/len(self.liDVal))**(1/2)),2)\n",
+    "\n",
+    "    def outlie(self):\n",
+    "        \"\"\"calcula los cuartiles y los outlie\"\"\"\n",
+    "        sorted(self.liDVal)\n",
+    "        med= self.media()\n",
+    "        q11= (len(self.liDVal)+1)//4\n",
+    "        q31= (3*(len(self.liDVal)+1))//4\n",
+    "        q1= self.liDVal[q11]\n",
+    "        q2= self.liDVal[q31]\n",
+    "        RIC= q2-q1\n",
+    "        out= []\n",
+    "        for i in self.liDVal:\n",
+    "            if i>(q1-1.5*RIC) or i<(q2+1.5*RIC):\n",
+    "                out.append(i)\n",
+    "        return f\"el valor outliers es {out}\"\n",
+    "    \n",
+    "listado = [2,4,5,46,7,76,52,4,7999,8,9,4555,6777]\n",
+    "\n",
+    "Grupo= BasicStats(listado)\n",
+    "print(Grupo.media())\n",
+    "print(Grupo.varia())\n",
+    "print(Grupo.DevSt())\n",
+    "print(Grupo.outlie())\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -74,7 +134,11 @@
     "```\n",
     "\n",
     "**Su respuesta acá**\n",
-    "\n",
+    "#1. Mostrara 1\n",
+    "#2. Mostrara 2\n",
+    "#3. Mostrara True\n",
+    "#4. Mostrara True\n",
+    "#5. Mostrara \"atributo de clase\"\n",
     "*TODO*"
    ]
   },
@@ -95,12 +159,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "773b21c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paz 2010 Liu Xiaobo\n"
+     ]
+    }
+   ],
    "source": [
-    "## TO DO..."
+    "## TO DO...\n",
+    "class PremioNobel():\n",
+    "\n",
+    "    def __init__(self, categoria, año, ganador):\n",
+    "        self.category= categoria\n",
+    "        self.year= año\n",
+    "        self.winner = ganador\n",
+    "\n",
+    "        return \n",
+    "    def category(self):\n",
+    "        return self.category\n",
+    "    \n",
+    "    def year(self):\n",
+    "        return self.year\n",
+    "\n",
+    "    def winner(self):\n",
+    "        return self.winner\n",
+    "\n",
+    "premio2010 = PremioNobel(\"Paz\", 2010, \"Liu Xiaobo\")\n",
+    "print(premio2010.category, premio2010.year, premio2010.winner)"
    ]
   },
   {
@@ -125,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO"
+    "## TODO\n"
    ]
   },
   {
@@ -146,12 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6705261c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jose,Rodriguez-Ana,Martinez\n"
+     ]
+    }
+   ],
    "source": [
-    "## TODO"
+    "## TODO\n"
    ]
   },
   {
@@ -193,10 +292,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "006f6d0a146a98ae4e484b7ab3e390336df27d1d007489d4cd24e5cef89f8849"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:pda]",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "conda-env-pda-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
