se actualiza repo con ejer 3 obligatorio hecho

--- a/Modulo 4/Ejercitación  Módulo 4 - Primera parte.ipynb
+++ b/Modulo 4/Ejercitación  Módulo 4 - Primera parte.ipynb
@@ -176,18 +176,22 @@
     "class PremioNobel():\n",
     "\n",
     "    def __init__(self, categoria, año, ganador):\n",
+    "        \"\"\"constructor\"\"\"\n",
     "        self.category= categoria\n",
     "        self.year= año\n",
     "        self.winner = ganador\n",
-    "\n",
     "        return \n",
+    "\n",
     "    def category(self):\n",
+    "        \"\"\"vuelve la categoria\"\"\"\n",
     "        return self.category\n",
     "    \n",
     "    def year(self):\n",
+    "        \"\"\"devuelve el año\"\"\"\n",
     "        return self.year\n",
     "\n",
     "    def winner(self):\n",
+    "        \"\"\"devuelve el gandor\"\"\"\n",
     "        return self.winner\n",
     "\n",
     "premio2010 = PremioNobel(\"Paz\", 2010, \"Liu Xiaobo\")\n",
@@ -214,9 +218,28 @@
    "execution_count": 3,
    "id": "09d99a5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paz,2010,Liu Xiaobo\n"
+     ]
+    }
+   ],
    "source": [
-    "## TODO\n"
+    "## TODO\n",
+    "class PremioNobel():\n",
+    "    def __init__(self, cat,ano, gan):\n",
+    "        self.category= cat\n",
+    "        self.year= str(ano)\n",
+    "        self.winner = gan\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        cadena = self.category+\",\"+self.year+\",\"+self.winner\n",
+    "        return cadena\n",
+    "premio2010 = PremioNobel(\"Paz\", 2010, \"Liu Xiaobo\")\n",
+    "print(premio2010)"
    ]
   },
   {
@@ -250,7 +273,21 @@
     }
    ],
    "source": [
-    "## TODO\n"
+    "## TODO\n",
+    "class sumar():\n",
+    "\n",
+    "    def __init__(self, lista):\n",
+    "        self.lis = lista\n",
+    "        return\n",
+    "    def recorre(self):\n",
+    "        for i in self.lis:\n",
+    "            if i\n",
+    "        return\n",
+    "\n",
+    "prueba= [10,20,30,40,50,60,70]\n",
+    "prueba2= suma(prueba)\n",
+    "print(prueba2.suma())\n",
+    "        "
    ]
   },
   {
