--- a/Modulo 4/Ejercitación  Módulo 4 - Segunda Parte/Ejercitación  Módulo 4 - Segunda Parte.ipynb
+++ b/Modulo 4/Ejercitación  Módulo 4 - Segunda Parte/Ejercitación  Módulo 4 - Segunda Parte.ipynb
@@ -155,6 +155,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92bf3f70",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "1976d72b",
    "metadata": {},
