se agrega matplotlib

--- a/Modulo 7 pandas/Módulo Pandas - Teoría.ipynb
+++ b/Modulo 7 pandas/Módulo Pandas - Teoría.ipynb
@@ -41,10 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "46ff4bca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.3.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "pandas.__version__"
@@ -113,10 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f5a019f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -161,10 +180,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "36ea04d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Relative_Compactness</th>\n",
+       "      <th>Surface_Area</th>\n",
+       "      <th>Wall_Area</th>\n",
+       "      <th>Roof_Area</th>\n",
+       "      <th>Overall_Height</th>\n",
+       "      <th>Orientation</th>\n",
+       "      <th>Glazing_Area</th>\n",
+       "      <th>Glazing_Area_Distribution</th>\n",
+       "      <th>Heating_Load</th>\n",
+       "      <th>Cooling_Load</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.98</td>\n",
+       "      <td>514.5</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>110.25</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.55</td>\n",
+       "      <td>21.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.98</td>\n",
+       "      <td>514.5</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>110.25</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.55</td>\n",
+       "      <td>21.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.98</td>\n",
+       "      <td>514.5</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>110.25</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.55</td>\n",
+       "      <td>21.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.98</td>\n",
+       "      <td>514.5</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>110.25</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.55</td>\n",
+       "      <td>21.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.90</td>\n",
+       "      <td>563.5</td>\n",
+       "      <td>318.5</td>\n",
+       "      <td>122.50</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.84</td>\n",
+       "      <td>28.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Relative_Compactness  Surface_Area  Wall_Area  Roof_Area  Overall_Height  \\\n",
+       "0                  0.98         514.5      294.0     110.25             7.0   \n",
+       "1                  0.98         514.5      294.0     110.25             7.0   \n",
+       "2                  0.98         514.5      294.0     110.25             7.0   \n",
+       "3                  0.98         514.5      294.0     110.25             7.0   \n",
+       "4                  0.90         563.5      318.5     122.50             7.0   \n",
+       "\n",
+       "   Orientation  Glazing_Area  Glazing_Area_Distribution  Heating_Load  \\\n",
+       "0            2           0.0                          0         15.55   \n",
+       "1            3           0.0                          0         15.55   \n",
+       "2            4           0.0                          0         15.55   \n",
+       "3            5           0.0                          0         15.55   \n",
+       "4            2           0.0                          0         20.84   \n",
+       "\n",
+       "   Cooling_Load  \n",
+       "0         21.33  \n",
+       "1         21.33  \n",
+       "2         21.33  \n",
+       "3         21.33  \n",
+       "4         28.28  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datos.head()"
    ]
@@ -658,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ae40e6d9",
    "metadata": {},
    "outputs": [],
@@ -675,10 +825,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "57c030c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La media es 22.307200520833305\n",
+      "La moda es 0    15.16\n",
+      "dtype: float64\n",
+      "La mediana es 18.95\n",
+      "Mínimo es 6.01. Máximo es 43.1\n",
+      "La varianza es 101.81204991019536. El desvío estándar es 10.090195732006162\n",
+      "El cuantil 30 es 14.32\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"La media es {media}\")\n",
     "print(f\"La moda es {moda}\")\n",
@@ -881,6 +1045,12 @@
     "\n",
     "Veamos"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22813970",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2080,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dbe188a8",
    "metadata": {},
    "outputs": [],
@@ -2135,12 +2305,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "93c9518a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>POP</th>\n",
+       "      <th>AREA</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>CONT</th>\n",
+       "      <th>IND_DAY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CHN</th>\n",
+       "      <td>China</td>\n",
+       "      <td>1398.72</td>\n",
+       "      <td>9596.96</td>\n",
+       "      <td>12234.78</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IND</th>\n",
+       "      <td>India</td>\n",
+       "      <td>1351.16</td>\n",
+       "      <td>3287.26</td>\n",
+       "      <td>2575.67</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1947-08-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>US</td>\n",
+       "      <td>329.74</td>\n",
+       "      <td>9833.52</td>\n",
+       "      <td>19485.39</td>\n",
+       "      <td>N.America</td>\n",
+       "      <td>1776-07-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IDN</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>268.07</td>\n",
+       "      <td>1910.93</td>\n",
+       "      <td>1015.54</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1945-08-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BRA</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>210.32</td>\n",
+       "      <td>8515.77</td>\n",
+       "      <td>2055.51</td>\n",
+       "      <td>S.America</td>\n",
+       "      <td>1822-09-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       COUNTRY      POP     AREA       GDP       CONT     IND_DAY\n",
+       "CHN      China  1398.72  9596.96  12234.78       Asia         NaN\n",
+       "IND      India  1351.16  3287.26   2575.67       Asia  1947-08-15\n",
+       "USA         US   329.74  9833.52  19485.39  N.America  1776-07-04\n",
+       "IDN  Indonesia   268.07  1910.93   1015.54       Asia  1945-08-17\n",
+       "BRA     Brazil   210.32  8515.77   2055.51  S.America  1822-09-07"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## obteniendo un DataFrame\n",
+    "import pandas as pd\n",
     "otroDF = pd.DataFrame(data = dic).T\n",
     "otroDF.head()"
    ]
@@ -2176,9 +2440,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pda]",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
-   "name": "conda-env-pda-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2190,7 +2454,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "006f6d0a146a98ae4e484b7ab3e390336df27d1d007489d4cd24e5cef89f8849"
+   }
   }
  },
  "nbformat": 4,
